added input for password

--- a/app/src/main/res/layout/activity_password_validator.xml
+++ b/app/src/main/res/layout/activity_password_validator.xml
@@ -21,6 +21,7 @@
 
     </android.support.design.widget.AppBarLayout>
 
-    <include layout="@layout/content_password_validator" />
+    <include layout="@layout/content_password_validator"
+        android:id="@+id/pword_validate" />
 
 </android.support.design.widget.CoordinatorLayout>
