--- a/app/src/main/res/layout/content_password_validator.xml
+++ b/app/src/main/res/layout/content_password_validator.xml
@@ -12,4 +12,20 @@
     tools:context="com.example.davidkerns.infosecurity_android_app.PasswordValidatorActivity"
     tools:showIn="@layout/activity_password_validator">
 
+    <EditText
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:inputType="textPassword"
+        android:ems="10"
+        android:id="@+id/passfield"
+        android:layout_alignParentTop="true"
+        android:layout_centerHorizontal="true" />
+
+    <Button
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:text="Validate"
+        android:id="@+id/validate_pword"
+        android:layout_below="@+id/passfield"
+        android:layout_centerHorizontal="true" />
 </RelativeLayout>
