added password criteria

--- a/app/src/main/res/layout/content_password_validator.xml
+++ b/app/src/main/res/layout/content_password_validator.xml
@@ -18,7 +18,7 @@
         android:inputType="textPassword"
         android:ems="10"
         android:id="@+id/passfield"
-        android:layout_alignParentTop="true"
+        android:layout_below="@+id/textView2"
         android:layout_centerHorizontal="true" />
 
     <Button
@@ -28,4 +28,62 @@
         android:id="@+id/validate_pword"
         android:layout_below="@+id/passfield"
         android:layout_centerHorizontal="true" />
+
+    <TextView
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:textAppearance="?android:attr/textAppearanceLarge"
+        android:text="Enter a password to test"
+        android:id="@+id/textView"
+        android:layout_alignParentTop="true"
+        android:layout_centerHorizontal="true" />
+
+    <TextView
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:textAppearance="?android:attr/textAppearanceSmall"
+        android:text="Can contain any letter/number/any of !, @, #, $, %, ^, &amp;, *"
+        android:id="@+id/textView2"
+        android:layout_below="@+id/textView"
+        android:layout_centerHorizontal="true" />
+
+    <TextView
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:textAppearance="?android:attr/textAppearanceLarge"
+        android:text="Contains letters"
+        android:id="@+id/haslet"
+        android:layout_below="@+id/validate_pword"
+        android:layout_centerHorizontal="true"
+        android:layout_marginTop="52dp" />
+
+    <TextView
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:textAppearance="?android:attr/textAppearanceLarge"
+        android:text="Contains numbers"
+        android:id="@+id/hasnum"
+        android:layout_marginTop="17dp"
+        android:layout_below="@+id/haslet"
+        android:layout_centerHorizontal="true" />
+
+    <TextView
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:textAppearance="?android:attr/textAppearanceLarge"
+        android:text="Contains special characters"
+        android:id="@+id/hasspec"
+        android:layout_below="@+id/hasnum"
+        android:layout_centerHorizontal="true"
+        android:layout_marginTop="17dp" />
+
+    <TextView
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:textAppearance="?android:attr/textAppearanceLarge"
+        android:id="@+id/criteriamet"
+        android:layout_below="@+id/hasspec"
+        android:layout_centerHorizontal="true"
+        android:layout_marginTop="100dp" />
+
 </RelativeLayout>
