added password criteria

--- a/app/src/main/res/layout/content_password_validator.xml
+++ b/app/src/main/res/layout/content_password_validator.xml
@@ -53,9 +53,9 @@
         android:textAppearance="?android:attr/textAppearanceLarge"
         android:text="Contains letters"
         android:id="@+id/haslet"
+        android:layout_marginTop="30dp"
         android:layout_below="@+id/validate_pword"
-        android:layout_centerHorizontal="true"
-        android:layout_marginTop="52dp" />
+        android:layout_centerHorizontal="true" />
 
     <TextView
         android:layout_width="wrap_content"
@@ -82,8 +82,18 @@
         android:layout_height="wrap_content"
         android:textAppearance="?android:attr/textAppearanceLarge"
         android:id="@+id/criteriamet"
+        android:layout_marginBottom="59dp"
+        android:layout_alignParentBottom="true"
+        android:layout_centerHorizontal="true" />
+
+    <TextView
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:textAppearance="?android:attr/textAppearanceLarge"
+        android:text="Longer than 8 characters"
+        android:id="@+id/haslen"
+        android:layout_marginTop="13dp"
         android:layout_below="@+id/hasspec"
-        android:layout_centerHorizontal="true"
-        android:layout_marginTop="100dp" />
+        android:layout_centerHorizontal="true" />
 
 </RelativeLayout>
