Password cracktime calculator and more field validation

--- a/app/src/main/res/layout/content_password_generator.xml
+++ b/app/src/main/res/layout/content_password_generator.xml
@@ -17,10 +17,10 @@
         android:gravity="center"
         android:weightSum="1">
         <TextView
-            android:text="Length: "
+            android:text="Length: \n(Suggested at least 8)"
             android:layout_width="0dp"
             android:layout_height="wrap_content"
-            android:layout_weight="0.3"
+            android:layout_weight="0.5"
             android:gravity="right"/>
         <EditText
             android:id="@+id/password_length"
@@ -35,10 +35,10 @@
         android:gravity="center"
         android:weightSum="1">
         <TextView
-            android:text="Number of Capitals: "
+            android:text="Number of Capitals: \n(Suggested at least 1)"
             android:layout_width="0dp"
             android:layout_height="wrap_content"
-            android:layout_weight="0.3"
+            android:layout_weight="0.5"
             android:gravity="right"/>
         <EditText
             android:id="@+id/password_caps"
@@ -53,10 +53,10 @@
         android:gravity="center"
         android:weightSum="1">
         <TextView
-            android:text="Number of digits: "
+            android:text="Number of digits: \n(Suggested at least 1)"
             android:layout_width="0dp"
             android:layout_height="wrap_content"
-            android:layout_weight="0.3"
+            android:layout_weight="0.5"
             android:gravity="right"/>
         <EditText
             android:id="@+id/password_digits"
@@ -72,10 +72,10 @@
         android:gravity="center"
         android:weightSum="1">
         <TextView
-            android:text="Number of special characters: "
+            android:text="Number of special characters: \n(Suggested at least 1)"
             android:layout_width="0dp"
             android:layout_height="wrap_content"
-            android:layout_weight="0.3"
+            android:layout_weight="0.5"
             android:gravity="right"/>
         <EditText
             android:id="@+id/password_specials"
@@ -97,5 +97,12 @@
         android:layout_height="wrap_content"
         android:layout_gravity="center"
         android:id="@+id/generated_password"/>
+
+    <TextView
+        android:layout_marginTop="30dp"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_gravity="center"
+        android:id="@+id/cracktime"/>
 
 </LinearLayout>
