added password suggestor

--- a/app/src/main/res/layout/content_password_validator.xml
+++ b/app/src/main/res/layout/content_password_validator.xml
@@ -21,14 +21,6 @@
         android:layout_below="@+id/textView2"
         android:layout_centerHorizontal="true" />
 
-    <Button
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:text="Validate"
-        android:id="@+id/validate_pword"
-        android:layout_below="@+id/passfield"
-        android:layout_centerHorizontal="true" />
-
     <TextView
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
@@ -54,8 +46,8 @@
         android:text="Contains letters"
         android:id="@+id/haslet"
         android:layout_marginTop="30dp"
-        android:layout_below="@+id/validate_pword"
-        android:layout_centerHorizontal="true" />
+        android:layout_centerHorizontal="true"
+        android:layout_below="@+id/passfield" />
 
     <TextView
         android:layout_width="wrap_content"
@@ -82,9 +74,9 @@
         android:layout_height="wrap_content"
         android:textAppearance="?android:attr/textAppearanceLarge"
         android:id="@+id/criteriamet"
-        android:layout_marginBottom="59dp"
-        android:layout_alignParentBottom="true"
-        android:layout_centerHorizontal="true" />
+        android:layout_below="@+id/haslen"
+        android:layout_centerHorizontal="true"
+        android:layout_marginTop="62dp" />
 
     <TextView
         android:layout_width="wrap_content"
@@ -94,6 +86,22 @@
         android:id="@+id/haslen"
         android:layout_marginTop="13dp"
         android:layout_below="@+id/hasspec"
+        android:layout_centerHorizontal="true" />
+
+    <Button
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:text="Show password"
+        android:id="@+id/show_pword"
+        android:layout_below="@+id/criteriamet"
+        android:layout_centerHorizontal="true" />
+
+    <Button
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:text="Generate better password"
+        android:id="@+id/genpass"
+        android:layout_below="@+id/show_pword"
         android:layout_centerHorizontal="true" />
 
 </RelativeLayout>
