Optional phrase insertion and additions to cracktime

--- a/app/src/main/res/layout/content_password_generator.xml
+++ b/app/src/main/res/layout/content_password_generator.xml
@@ -65,7 +65,6 @@
             android:layout_weight="0.3"/>
     </LinearLayout>
     <LinearLayout
-        android:layout_marginBottom="30dp"
         android:orientation="horizontal"
         android:layout_width="fill_parent"
         android:layout_height="wrap_content"
@@ -79,6 +78,25 @@
             android:gravity="right"/>
         <EditText
             android:id="@+id/password_specials"
+            android:layout_width="0dp"
+            android:layout_height="wrap_content"
+            android:layout_weight="0.3"/>
+    </LinearLayout>
+    <LinearLayout
+        android:layout_marginBottom="30dp"
+        android:orientation="horizontal"
+        android:layout_width="fill_parent"
+        android:layout_height="wrap_content"
+        android:gravity="center"
+        android:weightSum="1">
+        <TextView
+            android:text="Phrase"
+            android:layout_width="0dp"
+            android:layout_height="wrap_content"
+            android:layout_weight="0.5"
+            android:gravity="right"/>
+        <EditText
+            android:id="@+id/password_phrase"
             android:layout_width="0dp"
             android:layout_height="wrap_content"
             android:layout_weight="0.3"/>
