expanded password suggestion

--- a/app/src/main/res/layout/content_password_validator.xml
+++ b/app/src/main/res/layout/content_password_validator.xml
@@ -82,7 +82,7 @@
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:textAppearance="?android:attr/textAppearanceLarge"
-        android:text="Longer than 8 characters"
+        android:text="10 or more characters"
         android:id="@+id/haslen"
         android:layout_marginTop="13dp"
         android:layout_below="@+id/hasspec"
