--- a/app/src/main/res/layout/content_password_generator.xml
+++ b/app/src/main/res/layout/content_password_generator.xml
@@ -17,7 +17,7 @@
         android:gravity="center"
         android:weightSum="1">
         <TextView
-            android:text="Length: \n(Suggested at least 8)"
+            android:text="Length: \n(Suggested at least 10)"
             android:layout_width="0dp"
             android:layout_height="wrap_content"
             android:layout_weight="0.5"
@@ -83,14 +83,13 @@
             android:layout_weight="0.3"/>
     </LinearLayout>
     <LinearLayout
-        android:layout_marginBottom="30dp"
         android:orientation="horizontal"
         android:layout_width="fill_parent"
         android:layout_height="wrap_content"
         android:gravity="center"
         android:weightSum="1">
         <TextView
-            android:text="Phrase"
+            android:text="Phrase: "
             android:layout_width="0dp"
             android:layout_height="wrap_content"
             android:layout_weight="0.5"
@@ -100,6 +99,33 @@
             android:layout_width="0dp"
             android:layout_height="wrap_content"
             android:layout_weight="0.3"/>
+    </LinearLayout>
+    <LinearLayout
+        android:orientation="horizontal"
+        android:layout_width="fill_parent"
+        android:layout_height="wrap_content"
+        android:gravity="center"
+        android:weightSum="1">
+        <TextView
+            android:text="Cracking Speed: "
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"/>
+        <RadioGroup android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    android:orientation="horizontal">
+            <RadioButton android:id="@+id/radio_low"
+                         android:layout_width="wrap_content"
+                         android:layout_height="wrap_content"
+                         android:text="Low"/>
+            <RadioButton android:id="@+id/radio_medium"
+                         android:layout_width="wrap_content"
+                         android:layout_height="wrap_content"
+                         android:text="Medium"/>
+            <RadioButton android:id="@+id/radio_high"
+                         android:layout_width="wrap_content"
+                         android:layout_height="wrap_content"
+                         android:text="High"/>
+        </RadioGroup>
     </LinearLayout>
 
     <Button
@@ -113,6 +139,8 @@
         android:layout_marginTop="30dp"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
+        android:layout_marginRight="24dp"
+        android:layout_marginLeft="24dp"
         android:layout_gravity="center"
         android:id="@+id/generated_password"/>
 
@@ -120,6 +148,8 @@
         android:layout_marginTop="30dp"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
+        android:layout_marginRight="24dp"
+        android:layout_marginLeft="24dp"
         android:layout_gravity="center"
         android:id="@+id/cracktime"/>
 
